# ufpa-sd-tiktaktoe

./: Dockerfile  README.md  docker-compose.yaml  makefile  pyproject.toml
ufpa_sd_tiktaktoe/: __main__.py
ufpa_sd_tiktaktoe/services/rabbitmq/: __init__.py  consumer.py  publisher.py
ufpa_sd_tiktaktoe/tiktaktoe/: __init__.py
