[tool.poetry]
name = "ufpa-sd-tiktaktoe"
version = "0.1.0"
description = ""
authors = ["Jose Noronha <jnoronha@uolinc.com>"]
readme = "README.md"
packages = [{include = "ufpa_sd_tiktaktoe"}]

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
